--- a/src/app/modules/dca-management/add-of-edit-item/add-of-edit-item.component.html
+++ b/src/app/modules/dca-management/add-of-edit-item/add-of-edit-item.component.html
@@ -59,6 +59,6 @@
   <mat-divider></mat-divider>
   <div class="mt-6 mb-2 w-full flex items-center justify-center space-x-4">
     <button (click)="dialogRef.close(false)" mat-raised-button color="accent">Cancel</button>
-    <button mat-raised-button color="primary">Save</button>
+    <button (click)="saveData()" mat-raised-button color="primary">Save</button>
   </div>
 </div>
