--- a/src/app/modules/dca-management/add-dca/add-dca.component.html
+++ b/src/app/modules/dca-management/add-dca/add-dca.component.html
@@ -45,7 +45,7 @@
     </div>
     <div class="flex items-center justify-between">
       <span>Tổng số tiền DCA</span>
-      <span>{{formGroup.get('name_token')?.value | uppercasePipe}}/USDT</span>
+      <span>{{totalCost}}/USDT</span>
     </div>
   </div>
   <mat-divider></mat-divider>
