--- a/src/app/shared/components/comfirm-dialog/comfirm-dialog.component.html
+++ b/src/app/shared/components/comfirm-dialog/comfirm-dialog.component.html
@@ -11,7 +11,7 @@
   <div class="flex items-center justify-center py-4 mb-4">
     <p>{{data.content}}</p>
   </div>
-  <div class="flex items-center justify-center">
+  <div class="flex items-center justify-center space-x-4">
     <button (click)="dialogRef.close(false)" mat-raised-button color="accent">Cancel</button>
     <button (click)="dialogRef.close(true)" mat-raised-button color="primary">Save</button>
   </div>
